# ecommerce-admin-backend

./: .gitignore  README.md  alembic.ini  makefile  manage.py  pyproject.toml  규칙.md
app/: container.py  main.py
app/controller/: admin.py
app/controllers/: abtest.py  category.py  hellowold.py  module.py
app/middlewares/: module.py  timeheadermiddleware.py
app/models/: base.py  buyers.py  category.py  mixin.py  module.py  orders.py  products.py  sellers.py
app/repositories/: base.py  category.py  module.py
app/services/: category.py
app/utils/: hackle_client.py  module.py  slack.py  timestamp.py
migrations/sql/: env.py  makemigrations.json
migrations/sql/versions/: 00001_76164ffac5d3_initial.py  00002_ef2da5dc1f46_initial.py  00003_05184080de84_initial.py  00004_36a6e7ce29ad_initial.py
tests/: test_router.py
tests/controllers/: test_controller.py
tests/utils/: test_slack.py
